@@ -3,7 +3,7 @@
 {:paths   ["src" "resources"]
  :deps    {org.clojure/clojure {:mvn/version "1.10.3"}
            camel-snake-kebab/camel-snake-kebab {:mvn/version "0.4.3"}
-           io.opentelemetry/opentelemetry-api {:mvn/version "1.54.1"}
+           io.opentelemetry/opentelemetry-api {:mvn/version "1.55.0"}
            io.opentelemetry.instrumentation/opentelemetry-instrumentation-api {:mvn/version "2.20.1"}
            io.opentelemetry.semconv/opentelemetry-semconv {:mvn/version "1.37.0"}
            io.opentelemetry.semconv/opentelemetry-semconv-incubating {:mvn/version "1.37.0-alpha"}}
