@@ -3,6 +3,6 @@
 {:paths   ["src"]
  :deps    {org.clojure/clojure {:mvn/version "1.10.3"}
            com.github.steffan-westcott/clj-otel-sdk-common {:local/root "../clj-otel-sdk-common"}
-           io.opentelemetry/opentelemetry-exporter-prometheus {:mvn/version "1.54.1-alpha"}}
+           io.opentelemetry/opentelemetry-exporter-prometheus {:mvn/version "1.55.0-alpha"}}
  :aliases {:release  {:override-deps {com.github.steffan-westcott/clj-otel-sdk-common {:mvn/version "0.2.11"}}}
            :snapshot {:override-deps {com.github.steffan-westcott/clj-otel-sdk-common {:mvn/version "0.2.11-SNAPSHOT"}}}}}
