@@ -3,6 +3,6 @@
 {:paths   ["src" "resources"]
  :deps    {org.clojure/clojure {:mvn/version "1.10.3"}
            com.github.steffan-westcott/clj-otel-api {:local/root "../clj-otel-api"}
-           io.opentelemetry/opentelemetry-sdk-common {:mvn/version "1.54.1"}}
+           io.opentelemetry/opentelemetry-sdk-common {:mvn/version "1.55.0"}}
  :aliases {:release  {:override-deps {com.github.steffan-westcott/clj-otel-api {:mvn/version "0.2.11"}}}
            :snapshot {:override-deps {com.github.steffan-westcott/clj-otel-api {:mvn/version "0.2.11-SNAPSHOT"}}}}}
