@@ -39,13 +39,13 @@
                                      io.opentelemetry.instrumentation/opentelemetry-resources {:mvn/version "2.20.1-alpha"}
 
                                      ;; Enable export of telemetry using OpenTelemetry Protocol (OTLP)
-                                     io.opentelemetry/opentelemetry-exporter-otlp             {:mvn/version "1.54.1"}
+                                     io.opentelemetry/opentelemetry-exporter-otlp             {:mvn/version "1.55.0"}
 
                                      ;; Enable export of metrics to Prometheus via HTTP server for scraping
-                                     io.opentelemetry/opentelemetry-exporter-prometheus       {:mvn/version "1.54.1-alpha"}
+                                     io.opentelemetry/opentelemetry-exporter-prometheus       {:mvn/version "1.55.0-alpha"}
 
                                      ;; Enable export of telemetry debugging to console - Could remove this if unused
-                                     io.opentelemetry/opentelemetry-exporter-logging          {:mvn/version "1.54.1"}}}
+                                     io.opentelemetry/opentelemetry-exporter-logging          {:mvn/version "1.55.0"}}}
 
            ;; Include this alias for the OTLP exporter gRPC implementation to use Netty transport instead of default OkHttp
            :grpc-netty {:extra-deps {io.grpc/grpc-netty-shaded {:mvn/version "1.76.0"}
