@@ -26,6 +26,9 @@ WARNING: Until version `1.0.0` there is a greater possibility of breaking change
 
 === `0.2.11` (in progress)
 
+- Bump deps
+* [MAINT] OpenTelemetry `1.55.0`
+
 === `0.2.10` (2025-10-11)
 
 - [FIX] Fixed some cases where HTTP route data was not set correctly when using the instrumentation agent.
